tests/postgres/ui/list_param_needs_sql_forge_transparent.stderr
error[E0277]: the trait bound `TransparentId: SqlForgeValidatorValue<_>` is not satisfied
  --> tests/postgres/ui/list_param_needs_sql_forge_transparent.rs:15:13
   |
15 |       let _ = sql_forge!(
   |  _____________^
16 | |         User,
17 | |         "SELECT id, name FROM users WHERE id IN (:ids[])",
18 | |         ( :ids = ids ),
19 | |     );
   | |_____^ unsatisfied trait bound
   |
help: the trait `SqlForgeValidatorValue<_>` is not implemented for `TransparentId`
  --> tests/postgres/ui/list_param_needs_sql_forge_transparent.rs:11:1
   |
11 | struct TransparentId(pub i64);
   | ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `SqlForgeValidatorValue<Expected>`:
             `&'a str` implements `SqlForgeValidatorValue<&'a str>`
             `&T` implements `SqlForgeValidatorValue<Expected>`
             `Option<T>` implements `SqlForgeValidatorValue<Option<U>>`
             `Vec<u8>` implements `SqlForgeValidatorValue<Vec<u8>>`
             `bool` implements `SqlForgeValidatorValue<bool>`
             `f32` implements `SqlForgeValidatorValue<f32>`
             `f64` implements `SqlForgeValidatorValue<f64>`
             `i16` implements `SqlForgeValidatorValue<i16>`
           and $N others
note: required by a bound in `sql_forge::sql_forge_validator_value`
  --> src/traits.rs
   |
   | pub fn sql_forge_validator_value<Expected, T>(value: &T) -> Expected
   |        ------------------------- required by a bound in this function
   | where
   |     T: SqlForgeValidatorValue<Expected>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `sql_forge_validator_value`
   = note: this error originates in the macro `sql_forge` (in Nightly builds, run with -Z macro-backtrace for more info)
